# ai-switchboard

./: .env.example  .env.remote-services.example  .gitignore  .gitleaks.toml  .vercelignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  TERMS.md  TRADEMARKS.md  console-errors.md  deny.toml  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_commands.rs  activity_facts.rs  addon_commands.rs  agent_memory_commands.rs  analytics.rs  analytics_commands.rs  analytics_models.rs  analytics_normalization.rs  analytics_store.rs  app_services_commands.rs  app_update_commands.rs  backend_port.rs  claude_cli.rs  claude_sessions.rs  cli_discovery.rs  cli_entry.rs  client_adapters.rs  client_cleanup.rs  client_connector_list.rs  client_connector_status.rs  client_connectors.rs  client_footprint.rs  client_paths.rs  client_provider_configs.rs  client_setup_commands.rs  client_sidecar_rollbacks.rs  codex_threads.rs  connector_smoke.rs  cursor_native.rs  daily_briefing.rs  dashboard_commands.rs  dedicated_cleanup_rollback.rs  device.rs  doctor.rs  external_open.rs  gateway_readiness.rs  goose_provider_configs.rs  headroom_learn.rs  keychain.rs  learning_commands.rs  (+38 more)
src-tauri/src/agent_memory/: dedup.rs  discovery.rs  mod.rs  preview.rs  rollback.rs  secret_scan.rs  session.rs
src-tauri/src/doctor/: connector_issues.rs
src-tauri/src/optimization/: action_policy.rs  cache_metrics.rs  compaction.rs  compaction_action.rs  mod.rs  model_routing.rs  model_routing_validation.rs  policy.rs  (+15 more)
(+351 files in other folders)
