[package]
name = "headroom-desktop"
version = "0.3.8"
description = "Headroom v1 local-first LLM optimization tray app"
authors = ["Codex"]
license = "MIT"
edition = "2021"

[lib]
name = "headroom_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
flate2 = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
json5 = "=0.4.1"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
os_info = "3.10"
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "=0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
sys-locale = "0.3"
tar = "0.4"
tauri = { version = "=2.10.3", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.10.0"
time = "=0.3.47"
tokio = { version = "=1.50.0", features = ["macros", "rt-multi-thread", "process", "fs", "time"] }
uuid = { version = "=1.22.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
